# Gstreamer_plugins

./: README.md
GSTREAMER_PLUGINS/drawshapes/: CMakeLists.txt  readme.md
GSTREAMER_PLUGINS/logoimpose/: CMakeLists.txt  readme.md
